--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
-
+    ion-row{
+        height: 33.333333%;
+        //border: 1px solid black;
+    }
+    ion-grid
+    {
+        height: 100%;
+    }
+    ion-col
+    {
+        //border: 1px solid black;
+    }
+    .colItem
+    {
+        vertical-align: middle;
+        height: 100%;
+    }
 }
